<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fly or Drive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_location">Start Location (City)</string>
    <string name="end_location">End Location (City)</string>
    <string name="car_make">Make of Car</string>
    <string name="car_model">Model of Car</string>
    <string name="car_year">Year of Car</string>
    <string name="go_button">Go!</string>
    <string name="title_activity_results">Results</string>
    <string name="title_activity_maps">Map</string>
    <string name="select_year">Select Year of Car</string>
    <string name="select_make">Select Make of Car</string>
    <string name="select_model">Select Model of Car</string>
    <string name="select_car">Select Car</string>
    <string name="google_maps_key">AIzaSyBbT_qzGTN2ztapLqsVmdMrAQyxGbCQ84U</string>

    <string name="title_activity_start_up_screen">Fly or Drive</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
