<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/layout">

    <EditText
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/startLoc"
        android:hint="@string/start_location"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/endLoc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/endLoc"
        android:hint="@string/end_location"
        android:layout_below="@+id/startLoc"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carMake"
        android:hint="@string/car_make"
        android:layout_below="@+id/endLoc"
        android:layout_alignEnd="@+id/endLoc"
        android:layout_alignStart="@+id/endLoc"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carModel"
        android:layout_below="@+id/carMake"
        android:hint="@string/car_model"
        android:layout_alignEnd="@+id/carMake"
        android:layout_alignStart="@+id/carMake"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/carYear"
        android:layout_below="@+id/carModel"
        android:layout_alignStart="@+id/carModel"
        android:hint="@string/car_year"
        android:layout_alignEnd="@+id/carModel"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_button"
        android:id="@+id/goButton"
        android:layout_below="@+id/carYear"
        android:layout_alignStart="@+id/carYear"
        android:layout_alignEnd="@+id/carYear"
        android:background="#ff0ee324"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layoutMode="opticalBounds"
        android:layout_below="@+id/goButton"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/makeSpinner"
        android:layoutMode="opticalBounds"
        android:layout_below="@+id/spinner"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/modelSpinner"
        android:layoutMode="opticalBounds"
        android:layout_below="@+id/makeSpinner"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currLocRadioButton"
        android:onClick="onRadioButtonClicked"
        android:layout_alignBottom="@+id/startLoc"
        android:layout_toEndOf="@+id/startLoc" />

</RelativeLayout>
